--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Page</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome!!!</h1>
     <p>The Sky is blue</p>
     <a href="about.html">Learn more about us</a>
    <div class="photos">
